<resources>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="event_name">Event name</string>
    <string name="event_location">Event Location</string>
    <string name="event_date">Event date</string>
    <string name="event_type">Event type</string>
    <string name="event_description">Event description</string>
    <string name="fab_add_event">Add event</string>
    <string name="user_login_button">Login</string>
    <string name="guest_login_button">Guest</string>
    <string name="Login">Sign in</string>
    <string name="Logout">Sign out</string>
    <string name="bottom_nav_timeline">Timeline</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="bottom_nav_map">Map</string>
    <string name="bottom_nav_calendar">Calendar</string>
    <string name="event_favorite">Favorite event</string>
    <string name="user_info_title">User info</string>
    <string name="action_logout">Logout</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- navigation drawer -->
    <string name="navigation_user_name">Guest account</string>
    <string name="navigation_user_email">guest@email.com</string>
    <string name="navigation_general_headline">General Settings</string>
    <string name="navigation_general_notifications">Notifications</string>
    <string name="navigation_general_support">Support</string>
    <string name="navigation_general_settings">Settings</string>
    <string name="navigation_general_help">help</string>
    <string name="navigation_general_termsandconditions">Terms and conditions</string>
</resources>