<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/user_login_button_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login_button"
            app:startIconDrawable="@drawable/baseline_login_24"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/text_view_app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/guest_login_button_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_login_button"
            app:startIconDrawable="@drawable/baseline_person_pin_24"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/user_login_button_front"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            style="?textAppearanceHeadlineSmall"
            android:id="@+id/text_view_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintBottom_toTopOf="@id/user_login_button_front"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

</androidx.constraintlayout.widget.ConstraintLayout>